# BlinkMD

./: .gitignore  FEATURE-LOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: measure-memory.mjs  measure-startup.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: file.rs  mod.rs
src/app/: App.css  App.test.tsx  App.tsx  closeGuard.test.ts  closeGuard.ts  shortcutKeymap.test.ts  shortcutKeymap.ts  usePreviewSync.ts
src/editor/: EditorPane.tsx  editorTheme.ts
src/preview/: PreviewPane.tsx
src/services/: fileService.test.ts  fileService.ts  renderService.test.ts  renderService.ts
src/state/: documentStore.test.ts  documentStore.ts
